--- a/TRNSLT-180/bg/index.html
+++ b/TRNSLT-180/bg/index.html
@@ -104,25 +104,25 @@
                     <ul>
                         <li>
                             <h4> Упражненията само влошават проблема</h4>
-                            <p> Има много групи упражнения, които са предназначени да " укрепят ставите и гръбначния стълб " и които трябва да се правят всеки ден. Тези упражнения обаче обикновено са много болезнени. Не всеки има сили и време за ежедневни напрегнати упражнения. Най-лошото е, че малка грешка при тяхното изпълнение може да  <strong> влоши състоянието </strong> на ставите и гръбначния стълб, в резултат на което да се стигне до инвалидност.</p>
+                            <p> Има много групи упражнения, които са предназначени да "укрепят ставите и гръбначния стълб" и трябва да се правят всеки ден. Тези упражнения обаче обикновено са много болезнени. Не всеки има сили и време за ежедневни напрегнати упражнения. Най-лошото е, че малка грешка при тяхното изпълнение може да  <strong> влоши състоянието </strong> на ставите и гръбначния стълб, в резултат на което да се стигне до инвалидност.</p>
                         </li>
                         <li>
-                            <h4> Болкоуспокояващите действат за кратко време и оказват негативно влияние върху черния дроб.</h4>
+                            <h4> Болкоуспокояващите действат за кратко време и влияят негативно върху черния дроб</h4>
                             <p> Болкоуспокояващите действат до 3 часа. За да облекчите хроничната болка, трябва да ги приемате няколко пъти на ден. От друга страна таблетките за "укрепване на ставите и гръбначния стълб" съдържат изкуствени съставки, които масово се произвеждат на много ниска цена. Използването на такива химически съставки е напълно безполезно. Тъй като те са изкуствени, човешкото тяло не ги абсорбира и не ги използва за регенериране на хрущялите. Освен това, те причиняват безкраен списък от странични ефекти като<strong> пептични язви, загуба на слуха или нарушена бъбречна и чернодробна функция.</strong> Приемате хапчето с надеждата, че ще облекчи болката ви, а<strong> в крайна сметка страдате сто пъти повече. Това е абсурдно и няма нищо общо с крайната цел.</strong></p>
                         </li>
                         <li>
-                            <h4> Това е загуба на време и пари.</h4>
+                            <h4> Това е загуба на време и пари</h4>
                             <p> Има ли смисъл да харчите парите си за химически продукти, които освен че имат краткосрочно и незначително действие, отравят и увреждат организма ви? Разбира се, че не. Освен това упражненията, които правите сами или с помощта на физиотерапевт, отнемат много време и не гарантират подобрение. И най-лошото е, че те могат да изострят заболяването.</p>
                         </li>
                     </ul>
-                    <h5 style="margin-top: 40px;"> Ето защо макромолекулното лечение на професор Ресио е истински крайъгълен камък в борбата за здрави стави и здрав гръбначен стълб.</h5>
+                    <h5 style="margin-top: 40px;"> Ето защо макромолекулното лечение на професор Ресио е истински крайъгълен камък в борбата за здрави стави и здрав гръбначен стълб</h5>
                     <p> Таблетките водят само до краткотрайно и незначително облекчение, в същото време разрушават храносмилателната система и отравят организма. А мехлемите и геловете само  обогатяват  фармацевтичните компании.<strong> Всичко това поглъща здравето и парите, спечелени с толкова труд.</strong> Лечението на професор Ресио обаче се основава единствено на<strong> натурални съставки</strong> и не предизвиква странични ефекти. Облекчете незабавно болката и възстановете хрущяла, за да си върнете подвижността и да забравите какво е изтръпване и болка. Тази иновативна формула е комбинация от най-новите постижения в молекулярната биология, неврология и ревматология.</p>
                     <p> Съставките, които тя съдържа,<strong> са изцяло натурални и безопасни за здравето.</strong> Също така, благодарение на правилната формула, в съчетание, тези съставки имат много мощни регенериращи свойства. Ако се използват всеки ден, те възстановяват мобилността дори при хора с тежки дегенерации и трайни възпаления или посттравматични усложнения.</p>
                     <h5> Сега всеки човек може отново да има 100% здрави и силни стави</h5>
                     <p> Препаратът се предлага в търговската мрежа под името Fortuflex. Макромолекулната формула е активен крем, който незабавно се абсорбира от кожата и<strong> веднага облекчава болката, подуването и сковаността</strong> както в ставите, така и в гръбначния стълб. За разлика от таблетките, пълни с химикали, макромолекулното лечение е напълно безопасно за организма, което се потвърждава от изследванията на германския изследователски център в Дортмунд.</p>
                     <p> Тестванията на препарата потвърдиха, че ефективността<strong> на лечението е над 98%.</strong> Благодарение на него хора на възраст от 21 до 93 години постигнаха впечатляващи резултати: те се разделиха с болката, подуването и сковаността, а също така неутрализираха всички дегенерации, възпаления и усложнения, причинени от травми на ставите и на гръбначния стълб, независимо кога са били получени.</p>
                     <h5> Доказана ефективност</h5>
-                    <p> Тези хора облекчиха дори много силни болки в ставите и гръбнака, като просто приложиха макромолекулната формула на професор Ресио. Благодарение на нея те вече могат да се движат свободно и<strong> и да извършват всички  онези дейности, които до момента са били недостъпни за тях, заради болките.</strong></p>
+                    <p> Тези хора облекчиха дори много силни болки в ставите и гръбнака, като просто приложиха макромолекулната формула на професор Ресио. Благодарение на нея те вече могат да се движат свободно и<strong> да извършват всички  онези дейности, които до момента са били недостъпни за тях, заради болките.</strong></p>
                     <p> През следващите дни от лечението пациентите навлязат във фазата на интензивно възстановяване на хрущялната тъкан и синовиалната течност, което  води  до премахване на  сковаността, изтръпването и костните пукнатини. Техните<strong> стави, сухожилия и мускули укрепват на 87%,</strong> изчезват отоците и възпаленията. Ставите и гръбначният стълб са подложени на автоматична реконструкция 24 часа в денонощието.</p>
                     <p> В резултат на това артритът на ставите и гръбначния стълб е елиминиран, а участниците в тестирането повече не чувстват болка и са три пъти по-активни от преди. Но това не е всичко. След приключване на изследването всички участници се съгласиха с това, че<strong> си възвърнаха младежката подвижност.</strong> Днес те могат да ходят, да тичат и да танцуват без болка и скованост, както когато са били на 20-25 години!</p>
 
@@ -462,7 +462,7 @@ document.write(appendNull(p.getDate()) + '.' + monthb[p.getMonth()] + '.' + p.ge
                         <h3> Лука<span>
                                 <span class="comment_date"> 2021</span>
                             </span></h3>
-                        <p> И казват, че ние, испанците, не можем да постигнем успех на световно ниво. Изключително постижение, като за Нобелова награда. Поздравления за нашия сънародник!   </p>
+                        <p> И казват, че ние, испанците, не можем да постигнем успех на световно ниво. Изключително постижение, като за Нобелова награда. Поздравления за моя сънародник!   </p>
                     </div>
                 </article>
                 <article>
@@ -498,7 +498,7 @@ document.write(appendNull(p.getDate()) + '.' + monthb[p.getMonth()] + '.' + p.ge
                         <h3> Виктор<span>
                                 <span class="comment_date"> 2021</span>
                             </span></h3>
-                        <p> Приятели, искам да ви разкажа историята си: почти 6 години се борих с болки в коленете. След толкова години работа в завода, "заработих" си ужасни болки. За различни приспособления, наколенки и други неща похарчих 1600 лева, което не е толкова много, но като се има предвид средната пенсия, смятам че мога да бъда разбран. Никакви лекарства не помогнаха, единственият ефект от тях бяха стомашни проблеми. Същото е и с магнитните ленти: хората харчат пари за нищо - това е измама! Но наскоро дъщеря ми ми даде този продукт и бях изумен. Коленете изобщо не ме болят и сега се движа без проблеми. Вчера дори седнах на скутера на внучката си, много се смяхме, не знам дали това е подходящо за всички, но на мен ми хареса! Струва си да се опита.</p>
+                        <p> Приятели, искам да ви разкажа историята си: почти 6 години се борих с болки в коленете. След толкова години работа в завода, "заработих" си ужасни болки. За различни приспособления, наколенки и други неща похарчих 1600 лева, което не е толкова много, но като се има предвид средната пенсия, смятам че мога да бъда разбран. Никакви лекарства не помогнаха, единственият ефект от тях бяха стомашни проблеми. Същото е и с магнитните ленти: хората харчат пари за нищо - това е измама! Но наскоро дъщеря ми ми даде този крем и бях изумен. Коленете изобщо не ме болят и сега се движа без проблеми. Вчера дори седнах на скутера на внучката си, много се смяхме, не знам дали това е подходящо за всички, но на мен ми хареса! Струва си да се опита.</p>
                     </div>
                 </article>
                 <article>
@@ -606,7 +606,7 @@ document.write(appendNull(p.getDate()) + '.' + monthb[p.getMonth()] + '.' + p.ge
                         <h3> Илиян<span>
                                 <span class="comment_date"> 2021</span>
                             </span></h3>
-                        <p> Поръчах, чакам даставката. Със сигурност ще пиша за резултатите.</p>
+                        <p> Поръчах, чакам доставката. Със сигурност ще пиша за резултатите.</p>
                     </div>
                 </article>
 				
