--- a/TRNSLT-169/gr/index.html
+++ b/TRNSLT-169/gr/index.html
@@ -6586,7 +6586,7 @@
 <p style="margin: 0; color: white"> Εκπαίδευση:</p>
 <ul>
     <li style="margin: 0 0 0 0;color: white"> Σχολή Ιατρικών Επιστημών, Πανεπιστήμιο Αθηνών</li>
-    <li style="margin: 0 0 0 0;color: white"> Ιατρικό Πανεπιστήμιο του Μπρίστολ (αφήστε αυτό το Αγγλικό Ινστιτούτο ως έχει)</li>
+    <li style="margin: 0 0 0 0;color: white"> Ιατρικό Πανεπιστήμιο του Μπρίστολ </li>
 </ul>
 <p style="color: white"> Μέχρι το 2018 ασχολήθηκε με την ορθοπεδική. Αργότερα, μετά από μια ασθένεια, αφιερώθηκε στο ερευνητικό έργο. Ένα από τα πιο δημοφιλή μεταξύ των επαγγελματιών.</p>
 </div><br>
@@ -6595,12 +6595,12 @@
 <p> Είμαι 44 ετών και ασχολούμαι με την ιατρική από την ηλικία των 16 ετών. Στο πανεπιστήμιο είδα για πρώτη φορά τη Μαρία, δύο χρόνια πριν γίνει γυναίκα μου. Μετά το Πανεπιστήμιο του Μπρίστολ, δούλευα ως ορθοπεδικός χειρουργός μέχρι το 2018. Με προσκάλεσαν ως ειδικός σε πολλά τηλεοπτικά προγράμματα για την ιατρική, σε επιστημονικά συνέδρια. Με προσκάλεσαν να διδάξω στο Μπρίστολ. Αλλά αρνήθηκα την πρόταση, τώρα ασχολούμαι με μια νέα επιστημονική έρευνα.</p>
                         <p><img alt height="100%" src="images/image23.png" vspace="10" width="100%"></p>
 
-                        <p><b> - Από τότε είμασταν ήδη πραγματικός γιατρός. Τι σας εμπόδισε να δέχεστε τους ασθενείς το 2018?</b></p><p> Το 2016, η Μαρία διαγνώστηκε με οστεοαρθρίτιδα στο γόνατο.<b> Για 2 χρόνια δοκιμάσαμε τα πάντα: φυσιοθεραπεία, μηδενική σωματική δραστηριότητα, σύνθεση βιταμινών, γέλη και διάφορες αλοιφές.</b> Τίποτα δεν βοήθησε. Δεν ήθελα να πιστέψω ότι με την ιατρική μου εκπαίδευση και την επιτυχημένη πρακτική μου, δεν μπορούσα να κάνω τίποτα για να βοηθήσω τη γυναίκα μου, ώστε να συνεχίσουμε την ευτυχισμένη ζωή μας. Σκέφτηκα τι πρέπει να γίνει για να διορθώσω όλες τις ελλείψεις και παραλείψεις των φαρμακοποιών μας και ξεκίνησα την έρευνά μου.</p>
+                        <p><b> - Από τότε ήμουν ήδη πραγματικός γιατρός. Τι σας εμπόδισε να δέχεστε τους ασθενείς το 2018?</b></p><p> Το 2016, η Μαρία διαγνώστηκε με οστεοαρθρίτιδα στο γόνατο.<b> Για 2 χρόνια δοκιμάσαμε τα πάντα: φυσιοθεραπεία, μηδενική σωματική δραστηριότητα, σύνθεση βιταμινών, γέλη και διάφορες αλοιφές.</b> Τίποτα δεν βοήθησε. Δεν ήθελα να πιστέψω ότι με την ιατρική μου εκπαίδευση και την επιτυχημένη πρακτική μου, δεν μπορούσα να κάνω τίποτα για να βοηθήσω τη γυναίκα μου, ώστε να συνεχίσουμε την ευτυχισμένη ζωή μας. Σκέφτηκα τι πρέπει να γίνει για να διορθώσω όλες τις ελλείψεις και παραλείψεις των φαρμακοποιών μας και ξεκίνησα την έρευνά μου.</p>
 
  <p><img alt height="100%" src="images/image31.png" vspace="10" width="100%"></p>
  <p><b> - Έρευνα? Από που πήρατε να υλικά?</b></p>
 
-<p> Όταν καταλαβαίνετε ότι το αγαπημένο σας πρόσωπο είναι σχεδόν ανάπηρη και ότι σε λίγα χρόνια μπορεί να καταλήξει σε αναπηρική καρέκλα, αρχίζετε να κάνετε θαύματα. Μελέτησα κάθε είδους υλικά, ακόμη βρήκα μυστικές στρατιωτικές οδηγίες. Είχα πρόσβαση σε διαφορετικές μεθόδους, ξόδεψα όλα τα χρήματά μου στα καλύτερα εργαστήρια σε όλο τον κόσμο, συνάντησα ειδικούς και προσέλαβα τους καλύτερους φαρμακοποιούς στην ομάδα μου.</p>
+<p> Όταν καταλαβαίνετε ότι το αγαπημένο σας πρόσωπο είναι σχεδόν ανάπηρο και ότι σε λίγα χρόνια μπορεί να καταλήξει σε αναπηρική καρέκλα, αρχίζετε να κάνετε ότι περνάει απο το χέρι σας. Μελέτησα κάθε είδους υλικά, ακόμη βρήκα μυστικές στρατιωτικές οδηγίες. Είχα πρόσβαση σε διάφορες μεθόδους, ξόδεψα όλα τα χρήματά μου στα καλύτερα εργαστήρια σε όλο τον κόσμο, συνάντησα ειδικούς και προσέλαβα τους καλύτερους φαρμακοποιούς στην ομάδα μου.</p>
 <p><b> Τον Δεκέμβριο του 2018, δοκιμάσαμε όλες τις γνώσεις που είχα αποκτήσει μέχρι τώρα. Συνειδητοποίησα ότι χρειάστηκε ένας συνδυασμός συστατικών για να πάρει ένα φάρμακο που θα ανακουφίσει τον πόνο στις αρθρώσεις για μεγάλο χρονικό διάστημα.</b> Μπορεί να φαίνεται απλό, πάρτε το και κάντε το. Αλλά όχι. Διαπιστώσαμε ότι τα απαιτούμενα υλικά απλά δεν πωλούνται στη χώρα μας. Δανείστηκα ένα μεγάλο χρηματικό ποσό για μια παραγγελία από την Ασία. Μόλις έλαβα τα στοιχεία, άρχισε ένα άλλο δύσκολο στάδιο. Κανείς δεν δέχτηκε τα αιτήματά μου για την έναρξη παραγωγής. Αργότερα, έμαθα ότι η Big Pharma πρότεινε σε όλους τους κατασκευαστές να απορρίψουν το έργο μου. Στο τέλος, μπορεί να είναι μια τεράστια σπατάλη χρημάτων για αυτούς! Έτσι, οι φίλοι μου με βοήθησαν πολύ. Κάναμε μια μικρή σειρά δοκιμών και η Μαρία ξεκίνησε τη θεραπεία.</p>
 <p><b> Ήταν μια επιτυχία! Ήμουν πολύ χαρούμενος!</b></p>
 <p><b> - Τι έγινε αργότερα? Λειτούργησε πραγματικά το φάρμακο?</b></p>
@@ -6619,9 +6619,9 @@
 <p><b> - Αποδείξατε για άλλη μια φορά ότι ένας ταλαντούχος επιστήμονας μπορεί να κάνει τα πάντα! Αλλά αυτή η ιστορία έχει συνέχεια?</b></p>
 <p> Ναι, μετά από ένα χρόνο επιτυχίας αρχίσαμε να εκτιμούμε ακόμη περισσότερο τη ζωή και την ευτυχία στην καθημερινή ζωή. Και ένα άλλο θαύμα συνέβη: Γεννήθηκε το παιδί μας. Οι γυναίκες είναι εξοικειωμένες με το άγχος στις αρθρώσεις κατά τη διάρκεια της εγκυμοσύνης, αλλά η Μαρία δεν είχε κανένα πρόβλημα με αυτό. Ακόμη και με το ιατρικό μας ιστορικό.</p>
  <p><img alt height="100%" src="images/image13.png" vspace="10" width="100%"></p>
-<p> Το δεύτερο μέρος της ιατρικής ιστορίας ξεκίνησε μια νύχτα όταν<b> Η Μαρία με ρώτησε: "Πόσα άτομα στη χώρα μας έχουν παρόμοια προβλήματα?" Γνωρίζω αυτούς τους αριθμούς από την έρευνά μου. Ότι υπάρχουν πάνω από 4 εκατομμύρια άνθρωποι.</b> Στη συνέχεια, η Μαρία είπε: «Θα αναζητήσουμε το καλύτερο εργαστήριο και θα αγοράσουμε εξαρτήματα από τους καλύτερους προμηθευτές.<b> "Θα κάνουμε το καλύτερο δυνατό για να βοηθήσουμε άλλους ανθρώπους όπως με βοήθησες!"</b>
+<p> Το δεύτερο μέρος της ιατρικής ιστορίας ξεκίνησε μια νύχτα όταν<b> η Μαρία με ρώτησε: "Πόσα άτομα στη χώρα μας έχουν παρόμοια προβλήματα?" Γνωρίζω αυτούς τους αριθμούς από την έρευνά μου. Ότι υπάρχουν πάνω από 4 εκατομμύρια άνθρωποι.</b> Στη συνέχεια, η Μαρία είπε: «Θα αναζητήσουμε το καλύτερο εργαστήριο και θα αγοράσουμε υλικά από τους καλύτερους προμηθευτές.<b> "Θα κάνουμε το καλύτερο δυνατό για να βοηθήσουμε άλλους ανθρώπους όπως με βοήθησες!"</b>
 </p>
-<p> Αγαπώ τη γυναίκα μου όπως και την πρώτη μέρα. Αυτή η γυναίκα είναι ένα πραγματικό δώρο από τον Θεό. Συμφώνησα να συνεχίσω να εργάζομαι. Ένα άλλο έτος σκληρής δουλειάς, μέχρι να επιτευχθεί η τέλεια φόρμουλα, και τώρα<b> Fortuflex</b> επί του παρόντος η καλύτερη λύση για τις αρθρώσεις στην Ελλάδα.</p>
+<p> Αγαπώ τη γυναίκα μου όπως και την πρώτη μέρα που την γνώρισα. Αυτή η γυναίκα είναι ένα πραγματικό δώρο από τον Θεό. Συμφώνησα να συνεχίσω να εργάζομαι. Άλλο ένα χρόνο σκληρής δουλειάς, μέχρι να επιτευχθεί η τέλεια φόρμουλα, και τώρα<b> η Fortuflex</b> επί του παρόντος η καλύτερη λύση για τις αρθρώσεις στην Ελλάδα.</p>
 <center>
  <p><img alt height="100%" src="images/image15.png" vspace="10"></p></center>
 <p>
@@ -6643,16 +6643,16 @@
 <p><b> - Απίστευτο! Είστε ένας πραγματικός γιατρός της εποχής μας. Πώς το κάνατε αυτό?</b></p>
 <p> Ήταν μια περίοδος σκληρής δουλειάς και απίστευτα ισχυρών κινήτρων. Στον αγώνα για αυτό το προϊόν, ξεπέρασα καταστάσεις όπου οι άλλοι εγκατέλειπαν.<b> Μέχρι τη στιγμή που κυκλοφόρησε η κρέμα Fortuflex, 19.237 άτομα είχαν αρχίσει να ζουν μια ευχάριστη ζωή, ξεχνώντας για τα πάντα τον πόνο στις αρθρώσεις.</b>
 </p>
-<p><b> - Πού μπορείτε να παραγγείλετε την Fortuflex?</b></p>
+<p><b> - Πού μπορούμε να παραγγείλουμε την Fortuflex?</b></p>
 <p><b> Έχουμε μια επίσημη ιστοσελίδα όπου μπορείτε να παραγγείλετε το πρωτότυπο Fortuflex.</b></p>
-<p> Η Μαρία και εγώ αποφασίσαμε πρόσφατα να γιορτάσουμε την επέτειο της κυκλοφορίας μας δίνοντας στο Fortuflex μεγάλη έκπτωση σε όσους αντιμετωπίζουν προβλήματα. Τώρα όλοι μπορούν να επωφεληθούν από αυτήν την προσφορά.<b> πριν (εδώ είναι η ημέρα του μήνα και του έτους)<script type="text/javascript">
+<p> Η Μαρία και εγώ αποφασίσαμε πρόσφατα να γιορτάσουμε την επέτειο της κυκλοφορίας μας δίνοντας στο Fortuflex μεγάλη έκπτωση σε όσους αντιμετωπίζουν προβλήματα. Τώρα όλοι μπορούν να επωφεληθούν από αυτήν την προσφορά.<b> πριν <script type="text/javascript">
     var now = Date.now(),
     day = 1000 * 60 * 60 * 24;
     document.write(new Date(now).toLocaleDateString());
 </script>,</b> συμπεριλαμβανόμενου!</p>
 <div class="module module-find-chiropractor">
    <h3 style="color: white; font-weight: bold"><b> Να τι πρέπει να κάνετε για να λάβετε την ΕΚΠΤΩΣΗ Fortuflex:</b>
-<p style="color: white"><b> undefined</b>:</p>
+
 <ul style="list-style: none; color: white">
     <li style="color: white"> 1. Μεταβείτε στην επίσημη ιστοσελίδα της Fortuflex (το κουμπί βρίσκεται κάτω από το κείμενο) και κάντε την παραγγελία.</li>
     <li style="color: white"> 2. Ένας από τους εκπρόσωπος μας θα επικοινωνήσει μαζί σας το συντομότερο δυνατό. Θα απαντήσει σε όλες σας τις ερωτήσεις σχετικά με τη Fortuflex. Και θα κανονίσετε την ημερομηνία παράδοσης στη διεύθυνσή σας.</li>
@@ -6749,7 +6749,7 @@
 <div class="ittem-comment">
 <img src="images/image1.jpg" class="ava-img">
 <p><strong> Βικτώρια Στεργίου</strong></p>
-<p> Πρώτα την χρησιμοποίησα για τον καρπό μου και μετά το έδωσα στην αδερφή μου. Έπασχε από αρθρίτιδα για μεγάλο χρονικό διάστημα. Αχ να ξέρατε πόσο βοηθήσατε τη μητέρα μας, σας ευχαριστώ πολύ για την Fortuflex!</p>
+<p> Πρώτα την χρησιμοποίησα για τον καρπό μου και μετά την έδωσα στην αδερφή μου. Έπασχε από αρθρίτιδα για μεγάλο χρονικό διάστημα. Αχ να ξέρατε πόσο βοηθήσατε τη μητέρα μας, σας ευχαριστώ πολύ για την Fortuflex!</p>
 <p style="color: gray; padding-top: 10px;"> Πριν από 1 ώρα</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -6765,7 +6765,7 @@
 <div class="ittem-comment">
 <img src="images/image24.jpg" class="ava-img">
 <p><strong> Όλγα Πέτρου</strong></p>
-<p> Την υποστηρίζω πλήρως! Αυτή είναι μια πολύ αποτελεσματική κρέμα! Μετά από μια εβδομάδα, μπόρεσα να ανέβω τις σκάλες! Δεν ερεθίζει το δέρμα και έχει ευχάριστο άρωμα.</p>
+<p> Την υποστηρίζω πλήρως! Αυτή είναι μια πολύ αποτελεσματική κρέμα! Μετά από μια εβδομάδα, μπόρεσα να ανέβω τις σκάλες! Δεν ερεθίζει το δέρμα και έχει ευχάριστη οσμή.</p>
 <p style="color: gray; padding-top: 10px;"> Πριν από 1 ώρα</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -6773,14 +6773,16 @@
 <div class="ittem-comment">
 <img src="images/image8.jpg" class="ava-img">
 <p><strong> Γιάννης Μάκρης</strong></p>
-<p> Δρ. Κωνσταντίνε Αλεξόπουλε, σας ευχαριστώ πολύ για αυτήν την έρευνα!!! Έσωσε χιλιάδες ανθρώπους! Έχω οστεοχόνδρωση, πρόσφατα χρησιμοποίησα την Fortuflex και άρχισα να νιώθω καλύτερα. Νομίζω ότι στο μέλλον θα είμαι εντελώς καλά!</p>
+<p> Δρ. Κωνσταντίνε Αλεξόπουλε, σας ευχαριστώ πολύ για αυτήν την έρευνα!!! Σώσατε χιλιάδες ανθρώπους! Έχω οστεοχόνδρωση, πρόσφατα χρησιμοποίησα την Fortuflex και άρχισα να νιώθω καλύτερα. Νομίζω ότι στο μέλλον θα γίνω εντελώς καλά!</p>
 <p style="color: gray; padding-top: 10px;"> Πριν από 1 ώρα</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
 
 <div class="ittem-comment">
 <img src="images/image12.png" class="ava-img">
-<p><strong> undefined</strong></p>
+<p><strong> Κωνσταντίνε Αλεξόπουλε
+
+</strong></p>
 <p> Γιάννη, μην ανησυχείτε και συνεχίστε να χρησιμοποιείτε την Fortuflex. Το πιο σημαντικό είναι να ακολουθήσετε τις οδηγίες.</p>
 <p> Με εκτίμηση, Κωνσταντίνος Αλεξόπουλος</p>
 <p style="color: gray; padding-top: 10px;"> Πριν από 1 ώρα</p>
@@ -6864,7 +6866,7 @@
 <div class="ittem-comment">
 <img src="images/image30.jpg" class="ava-img">
 <p><strong> Αλέξανδρος Μούλης</strong></p>
-<p> Μπορείτε μου παρακαλώ, θα με βοηθήσει? Επειδή οι άλλες κρέμες που δοκίμαζα δεν με βοήθησαν καθόλου.</p>
+<p> Μπορείτε παρακαλώ, θα με βοηθήσει? Επειδή οι άλλες κρέμες που δοκίμαζα δεν με βοήθησαν καθόλου.</p>
 <p style="color: gray; padding-top: 10px;"> Πριν από 1 ώρα</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -6880,7 +6882,7 @@
 <div class="ittem-comment">
 <img src="images/image2.jpg" class="ava-img">
 <p><strong> Μαρίνα Βίτη</strong></p>
-<p> Αλέξανδρε, ναι, φυσικά, θα βοηθήσει. Το αποτέλεσμα είναι πολύ δυνατό και το κυριότερο είναι ότι δεν βλάπτει την υγεία σας. Παραγγείλετε σύντομα, τώρα που υπάρχει έκπτωση! Η Fortuflex με βοήθησε να απαλλαγώ εντελώς από τα προβλήματα της πλάτης μου.</p>
+<p> Αλέξανδρε, ναι, φυσικά, θα βοηθήσει. Το αποτέλεσμα είναι πολύ αποτελεσματικό και το κυριότερο είναι ότι δεν βλάπτει την υγεία σας. Παραγγείλετε σύντομα, τώρα που υπάρχει έκπτωση! Η Fortuflex με βοήθησε να απαλλαγώ εντελώς από τα προβλήματα της πλάτης μου.</p>
 <p style="color: gray; padding-top: 10px;"> Πριν από 1 ώρα</p>
 </div>
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -7026,7 +7028,7 @@
 <p><strong> Άννα Δέδε</strong></p>
 <p> Διάβασα το άρθρο και αποφάσισα αμέσως να παραγγείλω μια κρέμα για δοκιμή. Επιπλέον, με ενέπνευσε πολύ η ιστορία του Δρ Κωνσταντίνου Αλεξόπουλου και της συζύγου του. Το γεγονός είναι ότι τα συμβατικά φάρμακα δεν με βοήθησαν να απαλλαγώ από την αρθρίτιδα για μεγάλο χρονικό διάστημα. Τώρα μοιράζομαι τα αποτελέσματα μου. Η παράδοση της Fortuflex πραγματοποιείται πολύ γρήγορα. Την πρώτη μέρα ένιωσα καλύτερα και αμέσως ένιωσα μια ανακούφιση που δεν μπορώ καν να την περιγράψω. Ευχαριστώ πολύ, τώρα μπορώ επιτέλους να ζήσω μια φυσιολογική ζωή!</p>
 
-<p style="color: gray; padding-top: 10px;"> "Πριν από 31 λεπτά</p>
+<p style="color: gray; padding-top: 10px;"> Πριν από 31 λεπτά</p>
 </div>
 
 <div style="    border-top: 1px solid #60a5d4;  margin: 5px 0!important;   padding-bottom: 10px;"></div>
@@ -7104,7 +7106,7 @@
                 </a>
 </center><br><br>
                     <div id="colophon">
-                        <center><p>   </p>
+                        <center><p> © 2021 The Joint Corp. All Rights Reserved.</p>
 </center>                    </div>
                 </div>
 
