--- a/OFFERS-318/pt/index.html
+++ b/OFFERS-318/pt/index.html
@@ -41,7 +41,7 @@
         <header class="header">
             <div class="header__inner">
                 <h1 class="header__logo"><a href="{offer}" target="_blank"> ÚLTIMAS NOVIDADES</a></h1>
-                <div class="header__air"><a class="header__air-logo" href="{offer}" target="_blank"></a><a class="header__air-title" href="{offer}" target="_blank"> undefined</a></div>
+                <div class="header__air"><a class="header__air-logo" href="{offer}" target="_blank"></a><a class="header__air-title" href="{offer}" target="_blank"> </a></div>
                 <div class="search">
                     <form action class="search__form"><input class="search__text" name="q" placeholder="buscar" type="text"><input class="search__submit" type="submit" value="undefined"></form>
                 </div>
